# rust-learning

./: .gitignore  .vimspector.json  Cargo.toml  diagnose_codelens.sh  reset_rust_analyzer.sh
add_test/adder/: Cargo.toml
addr/src/: lib.rs
another_function/src/: main.rs
art/src/: lib.rs  main.rs
art2/: Cargo.toml
art2/src/: lib.rs  main.rs
branches/src/: main.rs
demo/src/: main.rs
docs/: nvim-coc-rust-debug.md  nvim-coc-rust-workflow.md  rust-engineering-practices.md  rust-learning-roadmap.md
enum_method/: Cargo.toml
enum_method/src/: main.rs
enum_method2/src/: main.rs
hash_map_test/: Cargo.toml
hash_map_test/src/: main.rs
io_test/: .vimspector.json  Cargo.toml
io_test/src/: main.rs
life_time_test/src/: lifetest.rs  main.rs
match_test/src/: main.rs  main2.rs
p03_borrowing/src/: main.rs
p03_practice/p3_immutable/: Cargo.toml
p04_borrowing_01/src/: main.rs
p04_borrowing_04/src/: main.rs
p04_borrowing_06/src/: main.rs
p12_minigrep/: Cargo.toml
p12_minigrep_lib/: Cargo.toml
p13_closure/: Cargo.toml
p13_cloure/: Cargo.toml
p13_move/: Cargo.toml
p14_doctest/: Cargo.toml
p15_cons_list_box/: Cargo.toml
p15_cons_list_test/: Cargo.toml
p15_deref_coercion/: Cargo.toml
p15_deref_trait/: Cargo.toml
p15_drop_test/: Cargo.toml
p15_refcell_test/: Cargo.toml
p16_thread_02_join/: Cargo.toml
p16_thread_03_move/: Cargo.toml
p16_thread_04_channel/: Cargo.toml
p16_thread_05_send_recv/: Cargo.toml
p16_thread_06_mutex/: Cargo.toml
propagating_test/: Cargo.toml
src/: main  main.rs
vector_test/: .vimspector.json
(+87 files in other folders)
